WeaponTest in progress